Fix(core): form label text, table th, td word-break 속성 overflow-wrap으로 수정

--- a/src/style-product/scss/layout/_side-panel.scss
+++ b/src/style-product/scss/layout/_side-panel.scss
@@ -114,7 +114,6 @@
   .dynamic-form__form-label-text {
     @include font-weight("regular");
     @include font-size("13");
-    @include line-height("heading");
   }
 
   .form__label-subtext {
